--- a/image_prep.ipynb
+++ b/image_prep.ipynb
@@ -54,13 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "10e3624a",
    "metadata": {},
    "outputs": [],
    "source": [
     "output_folders = [\"Processed/Hex\", \"Processed/Machine\", \"Processed/Philips\", \"Processed/Torx\"]\n",
-    "cropped_folders = [\"Cropped/Hex\", \"Cropped/Machine\", \"Cropped/Philips\", \"Cropped/Torx\"]\n"
+    "cropped_folders = [\"Cropped/Hex\", \"Cropped/Machine\", \"Cropped/Philips\", \"Cropped/Torx\"]\n",
+    "\n",
+    "# Create output folders if they don't exist\n",
+    "for folder in output_folders + cropped_folders:\n",
+    "    os.makedirs(folder, exist_ok=True)"
    ]
   }
  ],
