--- a/Calibration.ipynb
+++ b/Calibration.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6eef7186",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ[\"OPENCV_VIDEOIO_MSMF_ENABLE_HW_TRANSFORMS\"] = \"0\"\n",
     "import cv2\n",
     "import numpy as np\n",
     "import time "
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "40b0e1cf",
    "metadata": {},
    "outputs": [],
@@ -68,7 +70,15 @@
    "execution_count": null,
    "id": "c0cd6502",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Capturing images for calibration. Press 'q' to quit.\n"
+     ]
+    }
+   ],
    "source": [
     "# Open webcam feed\n",
     "cap = cv2.VideoCapture(0)  # Open default camera\n",
@@ -77,7 +87,7 @@
     "image_count = 0\n",
     "max_images = 50  # Set the number of images for calibration\n",
     "\n",
-    "print(\"Capturing images for calibration. Press 'q' to quit.\")"
+    "print(\"Ready to capture images for calibration. Press 'q' to quit.\")"
    ]
   },
   {
@@ -93,7 +103,64 @@
    "execution_count": null,
    "id": "eaacdb1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Captured 1/50 images\n",
+      "Captured 2/50 images\n",
+      "Captured 3/50 images\n",
+      "Captured 4/50 images\n",
+      "Captured 5/50 images\n",
+      "Captured 6/50 images\n",
+      "Captured 7/50 images\n",
+      "Captured 8/50 images\n",
+      "Captured 9/50 images\n",
+      "Captured 10/50 images\n",
+      "Captured 11/50 images\n",
+      "Captured 12/50 images\n",
+      "Captured 13/50 images\n",
+      "Captured 14/50 images\n",
+      "Captured 15/50 images\n",
+      "Captured 16/50 images\n",
+      "Captured 17/50 images\n",
+      "Captured 18/50 images\n",
+      "Captured 19/50 images\n",
+      "Captured 20/50 images\n",
+      "Captured 21/50 images\n",
+      "Captured 22/50 images\n",
+      "Captured 23/50 images\n",
+      "Captured 24/50 images\n",
+      "Captured 25/50 images\n",
+      "Captured 26/50 images\n",
+      "Captured 27/50 images\n",
+      "Captured 28/50 images\n",
+      "Captured 29/50 images\n",
+      "Captured 30/50 images\n",
+      "Captured 31/50 images\n",
+      "Captured 32/50 images\n",
+      "Captured 33/50 images\n",
+      "Captured 34/50 images\n",
+      "Captured 35/50 images\n",
+      "Captured 36/50 images\n",
+      "Captured 37/50 images\n",
+      "Captured 38/50 images\n",
+      "Captured 39/50 images\n",
+      "Captured 40/50 images\n",
+      "Captured 41/50 images\n",
+      "Captured 42/50 images\n",
+      "Captured 43/50 images\n",
+      "Captured 44/50 images\n",
+      "Captured 45/50 images\n",
+      "Captured 46/50 images\n",
+      "Captured 47/50 images\n",
+      "Captured 48/50 images\n",
+      "Captured 49/50 images\n",
+      "Captured 50/50 images\n"
+     ]
+    }
+   ],
    "source": [
     "while image_count < max_images:\n",
     "    ret, img = cap.read()\n",
@@ -125,7 +192,11 @@
     "\n",
     "    # Wait for the user to press 'q' to exit early\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "    # Release the camera and close windows\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -141,12 +212,20 @@
    "execution_count": null,
    "id": "11552602",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Camera matrix: [[813.28558132   0.         315.51506987]\n",
+      " [  0.         818.14578563 242.95098013]\n",
+      " [  0.           0.           1.        ]]\n",
+      "Distortion coefficients: [[-4.01578308e-02  1.62823323e+00 -4.10914432e-03 -1.10870070e-03\n",
+      "  -6.18164982e+00]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Release the camera and close windows\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()\n",
-    "\n",
     "# Perform the calibration once enough images are captured\n",
     "if len(img_points) >= max_images:\n",
     "    ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(obj_points, img_points, gray.shape[::-1], None, None)\n",
