--- a/ResNet18_classifier.ipynb
+++ b/ResNet18_classifier.ipynb
@@ -24,7 +24,8 @@
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import torchvision"
+    "import torchvision\n",
+    "from torch.utils.tensorboard import SummaryWriter"
    ]
   },
   {
@@ -37,14 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "5ef71f56",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataDir = \"Dataset\"\n",
     "batchSize = 16\n",
-    "numEpochs = 5"
+    "numEpochs = 10\n",
+    "writer = SummaryWriter(log_dir=\"runs/resnet18_screw_classifier\")"
    ]
   },
   {
@@ -57,12 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "2b09b76f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelPath = \"resnet18_custom.pth\"\n",
+    "modelPath = \"resnet18_screw_classifier.pth\"\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "d1209143",
    "metadata": {},
    "outputs": [
@@ -200,15 +202,19 @@
     "for epoch in range(numEpochs):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
-    "    for inputs, labels in train_loader:\n",
-    "        inputs, labels = inputs.to(device), labels.to(device)\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(inputs)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        running_loss += loss.item()\n",
-    "    print(f\"Epoch {epoch+1}/{numEpochs}, Loss: {running_loss/len(train_loader):.4f}\")\n"
+    "    for i, (inputs, labels) in enumerate(train_loader):\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            running_loss += loss.item()\n",
+    "\n",
+    "            writer.add_scalar(\"Loss/train_batch\", loss.item(), epoch * len(train_loader) + i)\n",
+    "\n",
+    "    avg_loss = running_loss / len(train_loader)\n",
+    "    writer.add_scalar(\"Loss/train\", avg_loss, epoch)"
    ]
   },
   {
@@ -221,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "ebdd4730",
    "metadata": {},
    "outputs": [
@@ -242,9 +248,12 @@
     "        inputs, labels = inputs.to(device), labels.to(device)\n",
     "        outputs = model(inputs)\n",
     "        _, predicted = torch.max(outputs, 1)\n",
-    "        total += labels.size(0)\n",
+    "        total += labels.size(0) \n",
     "        correct += (predicted == labels).sum().item()\n",
-    "print(f\"Validation Accuracy: {100 * correct / total:.2f}%\")"
+    "\n",
+    "val_accuracy = 100 * correct / total\n",
+    "print(f\"Validation Accuracy: {val_accuracy:.2f}%\")\n",
+    "writer.add_scalar(\"Accuracy/val\", val_accuracy, epoch)"
    ]
   },
   {
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "d325067c",
    "metadata": {},
    "outputs": [
@@ -270,9 +279,18 @@
     }
    ],
    "source": [
+    "writer.close()\n",
     "torch.save(model.state_dict(), modelPath)\n",
     "print(f\"Model saved to {modelPath}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed3dda36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
