--- a/image_prep.ipynb
+++ b/image_prep.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "c81b804e",
    "metadata": {},
    "outputs": [],
@@ -99,8 +99,11 @@
     "            # Convert the image to grayscale\n",
     "            gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
     "\n",
+    "            # Apply Gaussian blur before thresholding\n",
+    "            blurred = cv.GaussianBlur(gray, (3, 3), 0)\n",
+    "\n",
     "            # Apply a threshold to create a blob on the subject\n",
-    "            _, thresh = cv.threshold(gray, 160, 255, cv.THRESH_BINARY_INV)\n",
+    "            _, thresh = cv.threshold(blurred, 160, 255, cv.THRESH_BINARY_INV)\n",
     "\n",
     "            # The dilation will be applied to ensure all parts of the screw remains\n",
     "            dilated = cv.dilate(thresh, kernel, iterations=2)\n",
