--- a/ResNet18_classifier.ipynb
+++ b/ResNet18_classifier.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d1209143",
    "metadata": {},
    "outputs": [
@@ -215,8 +215,7 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
-    "# ----- TRAINING LOOP -----\n",
-    "print(\"Training...\")\n",
+    "print(f\"Training ResNet18 model\")\n",
     "for epoch in range(numEpochs):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
