--- a/MobileNetV2_classifier.ipynb
+++ b/MobileNetV2_classifier.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d82ce7da",
    "metadata": {},
    "outputs": [
@@ -146,11 +146,9 @@
     "    plt.axis('off')\n",
     "    plt.show()\n",
     "\n",
-    "# Get some random training images from your custom dataset\n",
+    "# Load some random images from the dataset\n",
     "dataiter = iter(train_loader)\n",
     "images, labels = next(dataiter)\n",
-    "\n",
-    "# Show images as a grid\n",
     "imshow(torchvision.utils.make_grid(images))"
    ]
   },
@@ -164,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8867f2a0",
    "metadata": {},
    "outputs": [
@@ -181,6 +179,7 @@
    ],
    "source": [
     "model = models.mobilenet_v2(pretrained=True)\n",
+    "\n",
     "model.classifier[1] = nn.Linear(model.classifier[1].in_features, num_classes)\n",
     "model = model.to(device)"
    ]
@@ -190,12 +189,12 @@
    "id": "0dc284e4",
    "metadata": {},
    "source": [
-    "With the model loaded, the training of the ResNet18 model using the images taken can be initialized"
+    "With the model loaded, the training of the MobileNetV2 model using the images taken can be initialized"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d1209143",
    "metadata": {},
    "outputs": [
@@ -212,9 +211,9 @@
    ],
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001) # Learning rate is determined\n",
     "\n",
-    "# Early stopping parameters\n",
+    "# Loss-stop variables\n",
     "patience = 1\n",
     "best_loss = float('inf')\n",
     "counter = 0\n",
@@ -236,14 +235,14 @@
     "    avg_loss = running_loss / len(train_loader)\n",
     "    print(f\"Epoch {epoch+1}/{numEpochs}, Loss: {avg_loss:.4f}\")\n",
     "\n",
-    "    # Early stopping logic\n",
+    "    # Loss-stopping\n",
     "    if avg_loss < best_loss:\n",
     "        best_loss = avg_loss\n",
-    "        counter = 0  # reset if improvement\n",
+    "        counter = 0\n",
     "    else:\n",
     "        counter += 1\n",
     "        if counter >= patience:\n",
-    "            print(f\"Early stopping triggered at epoch {epoch+1}\")\n",
+    "            print(f\"Loss-stopping at epoch {epoch+1}\")\n",
     "            break"
    ]
   },
@@ -252,12 +251,12 @@
    "id": "86652afb",
    "metadata": {},
    "source": [
-    "When the model i trained, the validation images will be used to find the accuracy of the ResNet model"
+    "When the model i trained, the validation images will be used to find the accuracy of the MobileNet model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ebdd4730",
    "metadata": {},
    "outputs": [
@@ -287,8 +286,7 @@
     "\n",
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
-    "\n",
-    "        # Store for confusion matrix\n",
+    "        \n",
     "        all_preds.extend(predicted.cpu().numpy())\n",
     "        all_labels.extend(labels.cpu().numpy())\n",
     "\n",
@@ -312,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bde91ac3",
    "metadata": {},
    "outputs": [
@@ -337,7 +335,6 @@
     }
    ],
    "source": [
-    "# Confusion matrix\n",
     "cm = confusion_matrix(all_labels, all_preds)\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=train_dataset.classes)\n",
     "\n",
