--- a/image_prep.ipynb
+++ b/image_prep.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "10e3624a",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,6 @@
     "dataset_train = [\"Dataset/train/Plaster\", \"Dataset/train/Machine\", \"Dataset/train/Philips\", \"Dataset/train/Torx\"]\n",
     "dataset_val = [\"Dataset/val/Plaster\", \"Dataset/val/Machine\", \"Dataset/val/Philips\", \"Dataset/val/Torx\"]\n",
     "\n",
-    "# Create output folders if they don't exist\n",
     "for folder in output_folders + dataset_train + dataset_val:\n",
     "    os.makedirs(folder, exist_ok=True)"
    ]
@@ -64,13 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c85b154e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a kernel for dilation\n",
-    "kernel = np.ones((9,9), np.uint8)  # Adjust size if needed"
+    "kernel = np.ones((9,9), np.uint8)"
    ]
   },
   {
@@ -78,12 +76,12 @@
    "id": "a75c6694",
    "metadata": {},
    "source": [
-    "With the dilation kernel defined, each image will be processed using grayscale, dilation, contours and will be cropped from the original image."
+    "With the dilation kernel defined, each image will be processed using grayscale, gaussian blue, dilation and will be cropped from the original image."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c81b804e",
    "metadata": {},
    "outputs": [],
@@ -108,14 +106,10 @@
     "            # The dilation will be applied to ensure all parts of the screw remains\n",
     "            dilated = cv.dilate(thresh, kernel, iterations=2)\n",
     "\n",
-    "            ## The processed image is saved\n",
-    "            #output_path = os.path.join(output_folder, filename)\n",
-    "            #cv.imwrite(output_path, dilated)\n",
-    "\n",
     "            # Using contours, the blobs are detected\n",
     "            contours, _ = cv.findContours(dilated, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
     "\n",
-    "            # Desired crop size\n",
+    "            # Crop size\n",
     "            crop_size = 256\n",
     "            half_crop = crop_size // 2\n",
     "\n",
@@ -126,19 +120,17 @@
     "                center_x = x + w // 2\n",
     "                center_y = y + h // 2\n",
     "\n",
-    "                # Define top-left corner of the 256x256 crop centered at the midpoint\n",
+    "                # Midpoint centering\n",
     "                x_start = max(center_x - half_crop, 0)\n",
     "                y_start = max(center_y - half_crop, 0)\n",
     "\n",
-    "                # Ensure we don't exceed image boundaries\n",
+    "                # Ensure the image boundaries aren't exceeded\n",
     "                x_end = min(x_start + crop_size, img.shape[1])\n",
     "                y_end = min(y_start + crop_size, img.shape[0])\n",
-    "\n",
-    "                # Adjust start if the crop goes out of bounds (important at image edges)\n",
     "                x_start = max(x_end - crop_size, 0)\n",
     "                y_start = max(y_end - crop_size, 0)\n",
     "\n",
-    "                # Crop the fixed-size image\n",
+    "                # Crop\n",
     "                cropped = img[y_start:y_end, x_start:x_end]\n",
     "\n",
     "                # Save the cropped image\n",
