--- a/ResNet18_classifier.ipynb
+++ b/ResNet18_classifier.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d82ce7da",
    "metadata": {},
    "outputs": [
@@ -146,11 +146,9 @@
     "    plt.axis('off')\n",
     "    plt.show()\n",
     "\n",
-    "# Get some random training images from your custom dataset\n",
+    "# Show random images from the dataset\n",
     "dataiter = iter(train_loader)\n",
     "images, labels = next(dataiter)\n",
-    "\n",
-    "# Show images as a grid\n",
     "imshow(torchvision.utils.make_grid(images))"
    ]
   },
@@ -216,7 +214,7 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
-    "# Early stopping parameters\n",
+    "# Loss-stop variables\n",
     "patience = 1\n",
     "best_loss = float('inf')\n",
     "counter = 0\n",
@@ -238,10 +236,10 @@
     "    avg_loss = running_loss / len(train_loader)\n",
     "    print(f\"Epoch {epoch+1}/{numEpochs}, Loss: {avg_loss:.4f}\")\n",
     "\n",
-    "    # Early stopping logic\n",
+    "    # Early stopping\n",
     "    if avg_loss < best_loss:\n",
     "        best_loss = avg_loss\n",
-    "        counter = 0  # reset if improvement\n",
+    "        counter = 0\n",
     "    else:\n",
     "        counter += 1\n",
     "        if counter >= patience:\n",
@@ -287,7 +285,6 @@
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
-    "        # Store for confusion matrix\n",
     "        all_preds.extend(predicted.cpu().numpy())\n",
     "        all_labels.extend(labels.cpu().numpy())\n",
     "\n",
@@ -311,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bde91ac3",
    "metadata": {},
    "outputs": [
@@ -336,7 +333,6 @@
     }
    ],
    "source": [
-    "# Confusion matrix\n",
     "cm = confusion_matrix(all_labels, all_preds)\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=train_dataset.classes)\n",
     "\n",
